--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ COINMARKETCAP_API_KEY=YOUR_CMC_KEY
 BINANCE_API_KEY=YOUR_BINANCE_KEY
 ARKHAM_API_KEY=YOUR_ARKHAM_KEY
 ETHERSCAN_API_KEY=YOUR_ETHERSCAN_KEY
+OPENAI_API_KEY=YOUR_OPENAI_KEY_HERE
 # ... Add other sources as needed
 
 # Localization default language
