--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.2</version>
+                <version>3.3.1</version> <!-- Исправлено на существующую версию -->
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
