--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,13 @@
 
         <!-- Dependency Versions -->
         <spring.boot.version>3.1.0</spring.boot.version>
-        <telegrambots.version>6.5.0</telegrambots.version>
+        <telegrambots.version>6.3.0</telegrambots.version>
         <lombok.version>1.18.26</lombok.version>
         <hibernate.version>6.2.6.Final</hibernate.version>
         <postgresql.version>42.5.4</postgresql.version>
         <junit.jupiter.version>5.9.3</junit.jupiter.version>
+        <dotenv.version>2.3.0</dotenv.version>
+        <json.version>20230618</json.version>
     </properties>
 
     <dependencies>
@@ -77,6 +79,20 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        
+        <!-- dotenv-java for environment variable management -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>${dotenv.version}</version>
+        </dependency>
+        
+        <!-- JSON Processing -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${json.version}</version>
         </dependency>
         
         <!-- Testing Dependencies -->
@@ -134,7 +150,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.1</version> <!-- Исправлено на существующую версию -->
+                <version>3.3.1</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
