--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <junit.jupiter.version>5.9.3</junit.jupiter.version>
         <dotenv.version>2.3.0</dotenv.version>
         <json.version>20231013</json.version> <!-- Обновлено до 20231013 -->
+        <slf4j.version>1.7.36</slf4j.version>
     </properties>
 
     <dependencies>
@@ -93,6 +94,19 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${json.version}</version>
+        </dependency>
+
+        <!-- SLF4J для логирования -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <!-- Зависимости для тестирования -->
