--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Java CI with Maven
 
 on:
   push:
@@ -12,42 +12,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: '17'
 
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
-        path: |
-          ~/.m2/repository
+        path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Install Dependencies
-      run: mvn install -DskipTests=true -B -V
+    - name: Build with Maven
+      run: mvn clean install -U
 
-    - name: Run Tests
+    - name: Run tests
       run: mvn test
-
-    - name: Build Project
-      run: mvn package -DskipTests=true
-
-    - name: Upload Test Results
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: target/surefire-reports/
-
-    - name: Upload Coverage Report
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report
-        path: target/site/jacoco/
