--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>${tomcat.embed.core.version}</version>
+            <version>[10.1.25,)</version>
         </dependency>
 
         <!-- Tomcat Embed WebSocket -->
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${spring.web.version}</version>
+            <version>[6.0.23,)</version>
         </dependency>
 
         <!-- Spring Context -->
@@ -138,21 +138,21 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>${logback.core.version}</version>
+            <version>[1.4.12,)</version>
         </dependency>
 
         <!-- Logback Classic -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.classic.version}</version>
+            <version>[1.4.12,)</version>
         </dependency>
 
         <!-- JSON -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20230618</version>
+            <version>[20231013,)</version>
         </dependency>
 
         <!-- SLF4J Logging -->
@@ -173,7 +173,7 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>${snakeyaml.version}</version>
+            <version>[2.0,)</version>
         </dependency>
 
         <!-- XMLUnit Core -->
