--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>[10.1.25,)</version>
+            <version>${tomcat.embed.core.version}</version>
         </dependency>
 
         <!-- Tomcat Embed WebSocket -->
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>[6.0.23,)</version>
+            <version>${spring.web.version}</version>
         </dependency>
 
         <!-- Spring Context -->
@@ -138,14 +138,14 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>[1.4.12,)</version>
+            <version>${logback.core.version}</version>
         </dependency>
 
         <!-- Logback Classic -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>[1.4.12,)</version>
+            <version>${logback.classic.version}</version>
         </dependency>
 
         <!-- JSON -->
